# auto-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAIMS_ROUTE_REFACTORING_PLAN.md  Dockerfile  ISSUES_CREATED.md  README.md  SENIOR_REVIEW.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  extract_and_place_models.py  extract_routes_by_lines.sh  extract_routes_script.py  fix_route_extraction.py  generate_route_modules.py  pyproject.toml  split_claims_analysis.py  split_claims_routes.py
.cursor/: environment.json
.cursor/rules/: claim-agent-testing.mdc
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_claim_jobs.py  002_audit_trail_enhancements.py  003_index_claim_audit_log_claim_id.py  004_claim_attachments.py  005_review_queue.py  006_siu_case_id.py  007_task_checkpoints.py  008_claim_notes.py  009_follow_up_messages.py  010_reserve_management.py  011_claim_payments.py  012_add_loss_state.py  013_claim_parties.py  014_add_liability_fields.py  015_subrogation_cases.py  (+45 more)
data/: california_auto_compliance.json  california_auto_policy_language.json  florida_auto_compliance.json  florida_auto_policy_language.json  georgia_auto_compliance.json  mock_db.json  new_york_auto_compliance.json  new_york_auto_policy_language.json  state_denial_compliance.json  state_retention_periods.json  texas_auto_compliance.json  texas_auto_policy_language.json
docs/: DOCUMENTATION_AUDIT.md  actuarial-reserve-reporting.md  adapter_sla.md  adapters.md  adjuster-workflow.md  agent-flow.md  alerting.md  api-integration-guide.md  architecture.md  async-processing.md  claim-notes-issue.md  claim-types.md  claims-route-refactoring.md  compliance-api.md  compliance-corpus-requirements.md  configuration.md  crews.md  database.md  deployment.md  design-considerations.md  disaster-recovery.md  eval-suite-gaps.md  evaluation-results.md  getting-started.md  index.md  mcp-server.md  mock-crew-design.md  mock-crew-implementation-plan.md  mock-crew-requirements.md  observability.md  performance-benchmarks.md  pii-and-retention.md  pilot-readiness-issues.md  pilot_data_seeding.md  rag.md  review-queue.md  runbooks.md  senior-engineer-assessment.md  skills.md  state-machine.md  (+5 more)
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
monitoring/: alert_rules.yml  alertmanager.yml  loki-config.yml  prometheus.yml  promtail-config-k8s.yml.example  promtail-config.yml  promtail-helm-values-k8s.example.yaml
nginx/: nginx.conf
scripts/: _backup_common.py  backup_postgres.py  blue_green_switch.sh  bootstrap.sh  canary_deploy.sh  download_corpus_sources.py  evaluate_claim_processing.py  evaluate_standalone_workflows.py  gh-oldest-open-issue-not-backlog.sh  investigate_claim.py  migrate_sqlite_to_postgres.py  restore_postgres.py  run_integration_tests.sh  seed_claims_from_mock_db.py  seed_pilot_data.py
tests/: __init__.py  conftest.py  conftest_embedding_mocks.py  conftest_shared.py  test_adapter_http_client_health.py  test_adapter_http_metrics.py  test_adapters.py  test_adjuster_action_service.py  test_adjuster_claim_access.py  test_after_action.py  test_agents.py  test_agents_structure.py  test_api.py  test_api_claims.py  test_api_claims_audit.py  test_api_claims_documents.py  test_api_claims_financial.py  test_api_claims_incidents.py  test_api_claims_parties.py  test_api_claims_review.py  test_api_claims_workflow.py  test_api_server_boot.py  test_api_version_redirect.py  test_attachments.py  test_audit_log_pii_redaction.py  test_auth.py  test_backup_postgres.py  test_bi_allocation.py  test_bi_post_crew_validation.py  test_bodily_injury_tools.py  test_canary_deploy.sh  test_chat.py  test_chat_api.py  test_checkpoints.py  test_circuit_breaker_config.py  test_claim_data.py  test_claim_parties.py  test_claim_search_rest_adapter.py  test_cli.py  test_concurrent_claim_guard.py  (+135 more)
(+707 files in other folders)
