[project]
name = "claim-agent"
version = "0.1.0"
description = "Agentic Claim Representative POC using CrewAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai[litellm]>=0.121.0",
    "crewai-tools>=0.40.0",
    "mcp>=1.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # RAG dependencies
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
observability = [
    "langsmith>=0.1.0",
]

[project.scripts]
claim-agent = "claim_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claim_agent"]

[tool.hatch.build.targets.sdist]
include = ["/src/claim_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (may take longer due to model loading or heavy computation)",
    "integration: marks tests as integration tests (test component interactions)",
    "llm: marks tests that require LLM API access (OPENAI_API_KEY must be set)",
    "e2e: marks tests as end-to-end tests (full workflow tests)",
]
# Default addopts to show test output and warnings
addopts = "-v --tb=short"
