[project]
name = "claim-agent"
version = "0.1.0"
description = "Agentic Claim Representative POC using CrewAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10.4",
    "crewai[litellm]>=0.121.0",
    "crewai-tools>=0.40.0",
    "mcp>=1.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    # RAG dependencies
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    # UI backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "prometheus_client>=0.21.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "PyJWT>=2.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
observability = [
    "langsmith>=0.1.0",
]
opentelemetry = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
]
pdf = [
    "reportlab>=4.0.0",
]
s3 = [
    "boto3>=1.34.0",
]
jwt = [
    "PyJWT>=2.0.0",
]
redis = [
    "redis>=5.0.0",
]

[project.scripts]
claim-agent = "claim_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claim_agent"]

[tool.hatch.build.targets.sdist]
include = ["/src/claim_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
markers = [
    "slow: marks tests as slow (may take longer due to model loading or heavy computation)",
    "integration: marks tests as integration tests (test component interactions)",
    "llm: marks tests that require LLM API access (OPENAI_API_KEY must be set)",
    "e2e: marks tests as end-to-end tests (full workflow tests)",
    "load: marks tests as load tests (concurrent submissions, throughput, latency)",
]
# Default addopts: exclude LLM tests for fast runs; use pytest -m llm for full coverage
addopts = "-v --tb=short -m \"not llm\""

[tool.coverage.run]
source = ["src/claim_agent"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"src/claim_agent/rag/vector_store.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
